fixed text alignment

--- a/src/components/style/Header.css
+++ b/src/components/style/Header.css
@@ -9,6 +9,9 @@
     
 }
 
+.contact span{
+  color: #FF8000;
+}
 
 .form{
   margin-left: 20px;
